# rb1_base_common

./: README.md
rb1_base_common/: CHANGELOG.rst  CMakeLists.txt  package.xml  package.xml~
rb1_base_control/: CMakeLists.txt  package.xml
rb1_base_control/config/: rb1_base_a_control.yaml  rb1_base_a_diffdrive_control.yaml  rb1_base_b_control.yaml  rb1_base_c_control.yaml  rb1_base_control.yaml  rb1_base_diffdrive_control.yaml  rb1_control.yaml  rb1_diffdrive_control.yaml  twist_mux.yaml  ur_arm_controllers.yaml  ur_left_arm_controllers.yaml  ur_right_arm_controllers.yaml
rb1_base_control/launch/: rb1_base_control.launch  ur_control.launch.xml
rb1_base_description/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
rb1_base_description/launch/: default.launch.py  rb1_base_rviz.launch  rb1_base_state.launch  view_robot.launch.py
rb1_base_description/robots/: coordinates_rb1_base.txt  rb1_base.urdf.xacro  rb1_base_elevator.urdf.xacro  rb1_base_platform.urdf.xacro  rb1_base_platform_kinova.urdf.xacro  rb1_base_platform_kinova_j2n6a300.urdf.xacro  rb1_base_platform_multi.urdf.xacro  rb1_base_platform_standalone.urdf.xacro  rb1_base_platform_standalone_multi.urdf.xacro  rb1_base_platform_standalone_v1.urdf.xacro  rb1_base_platform_v0.urdf.xacro  rb1_base_platform_v0_standalone.urdf.xacro  rb1_base_platform_v2.urdf.xacro  rb1_base_platform_v2_multi.urdf.xacro  rb1_base_platform_v3.urdf.xacro  rb1_base_platform_v3_multi.urdf.xacro  rb1_base_standalone.urdf.xacro  rb1_base_standalone_multi.urdf.xacro  rb1_base_std.urdf.xacro  rb1_base_std_elevator.urdf.xacro  rb1_base_v0.urdf.xacro  rb1_base_v0_multi.urdf.xacro  rb1_base_v1.urdf.xacro  rb1_base_v1_multi.urdf.xacro  rb1_base_v2.urdf.xacro  rb1_base_v2_elevator.urdf.xacro  rb1_base_v2_elevator_multi.urdf.xacro  rb1_base_v2_multi.urdf.xacro  rb1_base_v3.urdf.xacro  rb1_base_v3_hokuyo10lx.urdf.xacro  rb1_base_v3_multi.urdf.xacro  rb1_base_v3_rplidar.urdf.xacro  rb1_base_v3_tim551_orbbec_elevator.urdf.xacro  rb1_base_v3_ust20_orbbec.urdf.xacro  rb1_base_v3_ust20_orbbec_elevator.urdf.xacro  rb1_base_v3_ust20_orbbec_elevator_sim.urdf.xacro  rb1_dual_ur3.urdf.xacro  rb1_theround_test.urdf.xacro
rb1_base_description/urdf/: common.gazebo.xacro  inertia.urdf.xacro  rb1_base.urdf.xacro  ros2_control.urdf.xacro
rb1_base_kinova_j2n6a300_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rb1_base_kinova_j2n6a300_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  rb1_base_platform.srdf
rb1_base_kinova_j2n6a300_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
rb1_base_localization/: CMakeLists.txt  package.xml
rb1_base_localization/launch/: amcl.launch  gmapping.launch  imu_filter.launch  map_server.launch  rb1_base_localization_basic.launch  rb1_base_localization_odom.launch  rb1_base_localization_odom_6d.launch  robot_localization_odom.launch  robot_localization_odom_6d.launch  throttle_debug.launch
rb1_base_localization/scripts/: amcl_resample.py  bag.sh  imu_quat2rad.sh
rb1_base_localization/src/: robot_localization_utils.cpp
rb1_base_msgs/: CMakeLists.txt  package.xml
rb1_base_msgs/action/: SetElevator.action
rb1_base_msgs/msg/: ControllerSpeeds.msg  Elevator.msg
rb1_base_msgs/srv/: SetElevator.srv
rb1_base_navigation/: CMakeLists.txt  README.txt  package.xml
rb1_base_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params_map.yaml  global_costmap_params_no_map.yaml  global_costmap_params_obstacle.yaml  local_costmap_params.yaml  move.yaml  move_base_params.yaml  rgbd_to_scan_filter.yaml  scan_filter.yaml  teb_local_planner_params.yaml
rb1_base_navigation/config_navigation/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params_no_map.yaml  global_costmap_params_obstacle.yaml  teb_local_planner_params.yaml
rb1_base_navigation/config_rviz/: move_base.rviz  move_base_local.rviz
rb1_base_navigation/launch/: move.launch  move_base.launch  move_base_teb.launch  navigation_complete.launch  rb1_base_docking.launch  rb1_base_gmapping.launch  rgbd_to_laserscan.launch  scan_filter.launch  tf_publishers.launch
rb1_base_navigation/rb1_base_a_config_navigation/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params_map.yaml  global_costmap_params_no_map.yaml  global_costmap_params_obstacle.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
rb1_base_navigation/rb1_base_b_config_navigation/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params_map.yaml  global_costmap_params_no_map.yaml  global_costmap_params_obstacle.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
rb1_base_navigation/rb1_base_c_config_navigation/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params_map.yaml  global_costmap_params_no_map.yaml  global_costmap_params_obstacle.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
rb1_base_navigation/rb1_base_config_navigation/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params_map.yaml  global_costmap_params_obstacle.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
rb1_base_navigation/rb1_base_d_config_navigation/: base_local_planner_params.yaml  global_costmap_params_map.yaml  global_costmap_params_no_map.yaml  global_costmap_params_obstacle.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
rb1_base_pad/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
rb1_base_pad/config/: logitechf710.yaml  (+4 more)
rb1_base_perception/: CMakeLists.txt  package.xml
rb1_base_robot_local_control/: CMakeLists.txt  package.xml
(+166 files in other folders)
