<?xml version="1.0"?>
<package>
  <name>rb1_base_common</name>
  <version>2.0.0</version>
  <description>The rb1_base_common package. It contains rb1 base common packages used for robot control and for simulation</description>
  
  <author email="rguzman@robotnik.es">Roberto Guzmán</author>

  <maintainer email="asoriano@robotnik.es">Angel Soriano</maintainer>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <maintainer email="dredo@robotnik.es">David Redó</maintainer>
  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rb1_base_common</url>
  <url type="repository">https://github.com/RobotnikAutomation/rb1_base_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rb1_base_common/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>rb1_base_description</run_depend>
  <run_depend>rb1_base_pad</run_depend>
  <run_depend>rb1_base_navigation</run_depend>
  <run_depend>rb1_base_localization</run_depend>
  <run_depend>rb1_base_control</run_depend>

  <export><metapackage/></export>

</package>
