<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rb1_base_common</name>
  <version>1.12.0</version>
  <description>
    The rb1_base_common package. It contains rb1 base common packages 
    used for robot control and for simulation.
  </description>

  <maintainer email="asoriano@robotnik.es">Angel Soriano</maintainer>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <maintainer email="dredo@robotnik.es">David Redó</maintainer>
  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rb1_base_common</url>
  <url type="repository">https://github.com/RobotnikAutomation/rb1_base_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rb1_base_common/issues</url>

  <author email="rguzman@robotnik.es">Roberto Guzmán</author>
  
  <exec_depend>rb1_base_description</exec_depend>
  <exec_depend>rb1_base_navigation</exec_depend>
  <exec_depend>rb1_base_localization</exec_depend>
  <exec_depend>rb1_base_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
