<?xml version="1.0"?>
<package>
  <name>rb1_base_control</name>
  <version>1.12.0</version>
  <description>The rb1_base_control package</description>
  <maintainer email="asoriano@robotnik.es">Angel Soriano</maintainer>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <maintainer email="dredo@robotnik.es">David Redó</maintainer>
  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rb1_base_control</url>
  <url type="repository">https://github.com/RobotnikAutomation/rb1_base_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rb1_base_common/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>twist_mux</build_depend>
  <build_depend>controller_manager</build_depend>

  <run_depend>twist_mux</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>

</package>
