<?xml version="1.0"?>
<package>
  <name>rb1_base_description</name>
  <version>1.0.6</version>
  <description>The rb1_base_description package</description>

    <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
  <maintainer email="rnavarro@robotnik.es">Roman Navarro Garcia </maintainer>
  <maintainer email="aaliques@robotnik.com">Toni Aliques</maintainer>
  <author email="rguzman@robotnik.es">Roberto Guzmán</author>

<url type="website">http://wiki.ros.org/rb1_base_description</url>
  <url type="repository">https://github.com/RobotnikAutomation/rb1_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rb1_common/issues</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>robotnik_sensors</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>robotnik_sensors</run_depend>


 
  <export>
    
  </export>
</package>
