<?xml version="1.0"?>
<package>
  <name>rb1_base_navigation</name>
  <version>1.1.0</version>
  <description>
    This package configures the move_base stack and makes use of the gmapping and amcl algorithms to
    move the rb1_base robot
  </description>
  
  <maintainer email="asoriano@robotnik.es">Angel Soriano</maintainer>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <maintainer email="dredo@robotnik.es">David Redó</maintainer>
  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <url>http://ros.org/wiki/rb1_base_navigation</url>
  <url type="repository">https://github.com/RobotnikAutomation/rb1_base_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rb1_base_common/issues</url>

  <author>Robotnik</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>move_base</run_depend>
  <run_depend>teb_local_planner</run_depend>
  <run_depend>costmap_prohibition_layer</run_depend>

  <build_depend>move_base</build_depend>
  <build_depend>teb_local_planner</build_depend>
  <build_depend>costmap_prohibition_layer</build_depend>
  
</package>
