<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rb1_base_navigation</name>
  <version>1.12.0</version>
  <description>
    This package configures the move_base stack and makes use of the 
    gmapping and amcl algorithms to move the rb1_base robot.
  </description>

  <maintainer email="asoriano@robotnik.es">Angel Soriano</maintainer>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <maintainer email="dredo@robotnik.es">David Redó</maintainer>
  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <url>http://ros.org/wiki/rb1_base_navigation</url>
  <url type="repository">https://github.com/RobotnikAutomation/rb1_base_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rb1_base_common/issues</url>

  <author>Robotnik</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
