<?xml version="1.0"?>
<package>
  <name>rb1_base_pad</name>
  <version>1.12.0</version>
  <description>The rb1_base_pad package</description>

  <maintainer email="asoriano@robotnik.es">Angel Soriano</maintainer>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <maintainer email="dredo@robotnik.es">David Redó</maintainer>
  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <author email="rguzman@robotnik.es">Roberto Guzmán</author>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rb1_base_pad</url>
  <url type="repository">https://github.com/RobotnikAutomation/rb1_base_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rb1_base_common/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>joy</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>robotnik_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>joy</run_depend>

  <export>

  </export>
</package>
